  SCIPboundchgGetBoundtype(), SCIPboundchgIsRedundant(), SCIPdomchgGetNBoundchgs(), SCIPdomchgGetBoundchg()
- new method SCIPisStopped()
- SCIPgetVarStrongbranch() now also returns lperror == TRUE if the solving process should be stopped, e.g., because
  of a time limit
- new method SCIProwIsInGlobalCutpool()
- removed parameter "lowestboundfirst" from SCIPincludeNodesel()

plugins:
- new improvement heuristic "oneopt"
- improved performance of linear constraint propagation by delaying some floor/ceil calculations
- new node selection rule "estimate" (best estimate search)
- best estimate search is now used in all large neighborhood search heuristics
- new heuristic "actconsdiving" following an idea of John Chinneck
- new node selection rule "hybridestim"
- improved performance of clique cut separator
- modified reader "sol", st. files which where created via typing the order of commands 'set log *.sol', 'disp sol var -', 
  'set log cplex.log' in Cplex can now be read
- modified probing presolver to do multiple cycles if called in subsequent runs
- greatly improved performance of LP file reader by replacing string copies with pointer copies
- changed sort algorithm in probing presolver
- added flow cover separator
- gomory cuts are now also separated for integral slack variables
- less aggressive in Gomory cut separation
- strong CG cuts are now also separated for integral slack variables

parameters:
- new parameter "separating/clique/backtrackfreq" to speed up clique cut separation in heuristic fashion
- new parameters "separating/*/maxbounddist" to have individual maxbounddist parameters per separator
- changed default value of global "separating/maxbounddist" to 1.0
- new parameter "separating/redcost/continuous"
- new parameter "heuristics/feaspump/maxstallloops"
- priority parameters are now restricted to be in [INT_MIN/4,INT_MAX/4] to avoid overflow errors in comparison methods
- new parameter "presolving/immrestartfac"